# web_crawler_monzo_interview

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
tests/: main_test.py  test_main.py
webcrawler/: main.py
